# english-quiz

./: .gitignore  README.md  pyproject.toml
english_quiz/: question_asking.py  vocabulary_table_rename.csv
english_quiz/application/: main.py
english_quiz/infrastructure/: question_asker.py  score_handler.py  table_reader.py  table_retriever.py
tests/: test_english_quiz.py
tests/infrastructure/: test_question_asker.py
