[tool.poetry]
name = "english-quiz"
version = "0.1.0"
description = ""
authors = ["davvar38 <ngolo.gerrard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"
pandas = "^2.2.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
